--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -36,8 +36,8 @@ jobs:
       - name: Validate Network Bicep Templates
         run: az bicep build --file ./src/deploy/bicep/network/deploy.bicep --outfile ./artifactsBicep/network.json
 
-      # - name: Validate DevCenter Bicep Templates
-      #   run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outfile ./artifactsBicep/devBox.json
+      - name: Validate DevCenter Bicep Templates
+        run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outfile ./artifactsBicep/devBox.json
 
       - name: Upload Bicep Artifacts
         uses: actions/upload-artifact@v4
