--- a/.github/workflows/devBox-CI.yaml
+++ b/.github/workflows/devBox-CI.yaml
@@ -9,39 +9,14 @@ on:
         branches:
             - main
 
-
-env:
-  location: "WestUS3"
-
-  # Azure Resource Group Names Constants
-  devBoxResourceGroupName: "eShopPetDevBox-rg"
-  networkResourceGroupName: "eShopPetNetworkConnectivity-rg"
-  managementResourceGroupName: "eShopPetDevBoxManagement-rg"
-
-  # Identity Parameters Constants
-  identityName: "eShopPetDevBoxImgBldId"
-  customRoleName: "eShopPetBuilderRole"
-
-  # Image and DevCenter Parameters Constants
-  computeGalleryName: "eShopPetImageGallery"
-  devCenterName: "eShopPetDevCenter"
-
-  # Network Parameters Constants
-  vnetName: "eShopPetVnet"
-  subNetName: "eShopPetSubNet"
-  networkConnectionName: "eShopPetNetworkConnection"
-  
-  # Management Parameters constants
-  logAnalyticsWorkspaceName: "eShopPetDevBoxLogAnalytics"
-
 jobs:
     Validate-and-Build-Bicep-Templates:
       runs-on: ubuntu-latest
       steps:
-        # - name: Update Packages
-        #   run: |
-        #     sudo apt-get update && \
-        #     sudo apt-get upgrade -y
+        - name: Update Packages
+          run: |
+            sudo apt-get update && \
+            sudo apt-get upgrade -y
 
         - name: Checkout repository
           uses: actions/checkout@v4
