--- a/.github/workflows/devBox-CI.yaml
+++ b/.github/workflows/devBox-CI.yaml
@@ -16,7 +16,7 @@ jobs:
         - name: Update Packages and Upgrade Bicep
           run: |
             sudo apt-get update && \
-            sudo apt-get upgrade -y \
+            sudo apt-get upgrade -y && \
             sudo az bicep upgrade
 
         - name: Checkout repository
