--- a/.github/workflows/devBox-CD.yaml
+++ b/.github/workflows/devBox-CD.yaml
@@ -1,4 +1,4 @@
-name: DevBox as a Service Continuous Integration
+name: DevBox as a Service Continuous Deployment
 
 permissions:
     id-token: write
