--- a/.github/workflows/devBox-CD.yaml
+++ b/.github/workflows/devBox-CD.yaml
@@ -41,10 +41,10 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
-            tag_name: ${{ github.ref }}
-            release_name: "Release ${{ github.ref }}"
+            tag_name: "${{ github.run_number }}-GA"  
+            release_name: "Release ${{ github.ref_name }}"
             body: |
-              Release notes for ${{ github.ref }}.
+              Release notes for ${{ github.ref_name }}.
             draft: false
             prerelease: false
 
