--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,9 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Docsy Jekyll
-email: your-email@domain.com
-author: Dinosaur Avocado
+title: Developer Experience with Microsoft DevBox
+email: evilazaro@gmail.com
+author: Evilazaro Alves
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -29,15 +29,15 @@ baseurl: "/DevExp-MicrosoftDevBox" # the subpath of your site, e.g. /blog
 url: "https://evilazaro.github.io" # the base hostname & protocol for your site
 
 # Social (First three Required)
-repo: "https://github.com/vsoch/docsy-jekyll"
-github_user: "vsoch"
-github_repo: "docsy-jekyll"
-github_branch: "master"
+repo: "https://github.com/Evilazaro/DevExp-MicrosoftDevBox"
+github_user: "evilazaro"
+github_repo: "DevExp-MicrosoftDevBox"
+github_branch: "main"
 
 # Optional
-twitter: vsoch
-linkedin: vsochat
-dockerhub: vanessa
+twitter: evilazaro
+linkedin: evilazaro
+dockerhub: evilazaro
 
 # These options are used to configure the locations of your version history when you want to serve versioned documents
 version_params:
@@ -84,7 +84,7 @@ themeColor: red # purple, green, blue, orange, purple, grey
 fixedNav: 'true' # true or false
 
 permalink: /:year/:title/
-markdown: kramdown
+
 exclude: [_site, CHANGELOG.md, LICENSE, README.md, vendor]
 
 # Collections
