--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -43,10 +43,10 @@ jobs:
       #     name: artifactsBicep-ARM-Templates
       #     path: ./artifactsBicep/*.json
 
-      # - name: Log in to Azure
-      #   uses: azure/login@v2
-      #   with:
-      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Log in to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       # - name: Bicep Upgrade
       #   run: az bicep upgrade
