--- a/.github/workflows/devBox-CI.yaml
+++ b/.github/workflows/devBox-CI.yaml
@@ -8,6 +8,7 @@ on:
     push:
         branches:
             - main
+            - devCenterNameFix
 
 env:
   FORCE_JAVASCRIPT_ACTIONS_TO_NODE20: true
