--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -16,7 +16,7 @@ env:
   FORCE_JAVASCRIPT_ACTIONS_TO_NODE20: true
 
 jobs:
-  Build-And-Deploy-DevBox-As-A-Service-For-eShop:
+  Build:
     runs-on: ubuntu-latest
     steps:
       - name: Update Packages and Upgrade Bicep
@@ -42,6 +42,19 @@ jobs:
         with:
           name: artifactsBicep-ARM-Templates
           path: ./artifactsBicep/*.json
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Update Packages and Upgrade Bicep
+        run: |
+          sudo apt-get update && \
+          sudo apt-get upgrade -y && \
+          sudo az bicep upgrade
+      
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Log in to Azure
         uses: azure/login@v2
