--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -16,13 +16,20 @@ env:
   FORCE_JAVASCRIPT_ACTIONS_TO_NODE20: true
 
 jobs:
-  Build:
+  Test-Azure-Credentials-And-Login:
     runs-on: ubuntu-latest
     steps:
-      - name: Update Packages and Upgrade Bicep
+      - name: Log in to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+  Build:
+    runs-on: ubuntu-latest
+    needs: Test-Azure-Credentials-And-Login
+    steps:
+      - name: Upgrade Bicep
         run: |
-          sudo apt-get update && \
-          sudo apt-get upgrade -y && \
           sudo az bicep upgrade
 
       - name: Checkout repository
