--- a/customizations/workloads/frontEndEngineer/workload.yaml
+++ b/customizations/workloads/frontEndEngineer/workload.yaml
@@ -2,16 +2,6 @@ $schema: "1.0"
 name: "devbox-backend-winget"
 description: "Customize the backend workload for the devbox"
 tasks:
-  - name: powershell
-    description: "Windows Subsystem for Linux"
-    parameters:
-      command: "wsl --install -d Ubuntu --no-launch"
-      runAsUser: true
-  - name: winget
-    description: "Install App Microsoft.AppInstaller"
-    parameters:
-      package: "Microsoft.AppInstaller"
-      runAsUser: true
   - name: winget
     description: "Install App Microsoft.PowerToys"
     parameters:
@@ -81,46 +71,10 @@ tasks:
       runAsUser: true
   - name: powershell
     description: "Install VS Code extensions"
-    parameters:
-      command: |
-        "Set-ExecutionPolicy Bypass -Scope Process -Force; 
-        function InstallVSCodeExtensions {
-            try {
-                Write-Host 'Installing VSCode extensions...'
-
-                $extensions = @(
-                    'ms-vscode-remote.remote-wsl',
-                    'ms-vscode.PowerShell',
-                    'ms-vscode.vscode-node-azure-pack',
-                    'GitHub.copilot',
-                    'GitHub.vscode-pull-request-github',
-                    'GitHub.copilot-chat',
-                    'GitHub.remotehub',
-                    'GitHub.vscode-github-actions',
-                    'eamodio.gitlens-insiders',
-                    'ms-vscode.azure-repos',
-                    'ms-azure-devops.azure-pipelines',
-                    'ms-azuretools.vscode-docker',
-                    'ms-kubernetes-tools.vscode-kubernetes-tools',
-                    'ms-kubernetes-tools.vscode-aks-tools',
-                    'ms-azuretools.vscode-azurecontainerapps',
-                    'ms-azuretools.vscode-azurefunctions',
-                    'ms-azuretools.vscode-apimanagement'
-                )
-
-                foreach ($extension in $extensions) {
-                    code --install-extension $extension --force
-                }
-
-                Write-Host 'VSCode extensions have been installed successfully.'
-            }
-            catch {
-                Write-Host 'Failed to install VSCode extensions: $_' -Level 'ERROR'
-            }
-        }
-
-        InstallVSCodeExtensions"
-      runAsUser: true
+    parameters:  
+      command: "../tasks/install-vs-extension/Install-VSIXExtension.ps1"
+      workingDirectory: C:\\provisioning\\temp
+    runAsUser: true
   - name: git-clone
     description: "Clone the eShopRepository repository"
     parameters:
