Fixing Error BCP062: The referenced declaration with name subnet is not valid.

--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -6,8 +6,7 @@ permissions:
 # note
 on:
   workflow_dispatch: # Manually trigger the workflow
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - main
 
