--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -30,7 +30,6 @@ jobs:
 
   Build:
     runs-on: ubuntu-latest
-    needs: Test-Azure-Credentials-And-Login
     steps:
       - name: Upgrade Bicep
         run: |
@@ -124,7 +123,7 @@ jobs:
 
   create-release:
       runs-on: ubuntu-latest
-      needs: publish-bicep-artifacts
+      needs: Deploy
       steps:
       - name: Checkout repository
         uses: actions/checkout@v2
