--- a/.github/workflows/devBox-CI.yaml
+++ b/.github/workflows/devBox-CI.yaml
@@ -15,10 +15,10 @@ env:
   FORCE_JAVASCRIPT_ACTIONS_TO_NODE20: true
 
 jobs:
-    Validate-and-Build-Bicep-Templates:
+    Build:
       runs-on: ubuntu-latest
       steps:
-        - name: Update Bicep
+        - name: Upgrade Bicep
           run: |
             sudo az bicep upgrade
 
@@ -26,16 +26,20 @@ jobs:
           uses: actions/checkout@v4
 
         - name: Build Management Bicep Templates
-          run: az bicep build --file ./src/deploy/bicep/management/deploy.bicep --outfile ./artifactsBicep/deployManagement.json
+          run: az bicep build --file ./src/deploy/bicep/management/deploy.bicep --outdir ./bicepArtifacts
 
         - name: Build Network Bicep Templates
           run: az bicep build --file ./src/deploy/bicep/network/deployNetwork.bicep --outdir ./bicepArtifacts
 
         - name: Build DevCenter Bicep Templates
-          run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outfile ./artifactsBicep/deployDevBox.json
+          run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outdir ./bicepArtifacts
+
+        - name: Compress Bicep Artifacts
+          run: |
+            zip -r bicepArtifacts_v1.0.0-build-${{ github.run_number }}.zip ./bicepArtifacts
 
         - name: Upload Bicep Artifacts
           uses: actions/upload-artifact@v4
           with:
-            name: artifactsBicep-ARM-Templates
-            path: ./artifactsBicep/*.json
+            name: bicepArtifacts_v1.0.0-build-${{ github.run_number }}.zip
+            path: bicepArtifacts_v1.0.0-build-${{ github.run_number }}.zip
