--- a/.github/workflows/cleanUpDeployment.yaml
+++ b/.github/workflows/cleanUpDeployment.yaml
@@ -20,6 +20,9 @@ jobs:
     CleanUp:
         runs-on: ubuntu-latest
         steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+              
             - name: Log in to Azure
               uses: azure/login@v2
               with:
@@ -28,6 +31,7 @@ jobs:
             - name: Grant execute permissions to the script
               run: | 
                 chmod +x ./src/deploy/bicep/bash/cleanUp.sh
+                
       
             - name: Cleaning Up Azure Resources for ${{ env.solutionName }}
               run: ./src/deploy/bicep/bash/cleanUp.sh 
