new cleanUp script

--- a/.github/workflows/cleanUpDeployment.yaml
+++ b/.github/workflows/cleanUpDeployment.yaml
@@ -15,7 +15,7 @@ env:
   networkResourceGroupName: "PetDx-Network-rg"
   managementResourceGroupName: "PetDx-Management-rg"
   FORCE_JAVASCRIPT_ACTIONS_TO_NODE20: true
-  SubscriptionId: ${{ secrets.AZURE_CREDENTIALS }}
+  SubscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId }}
 
 jobs:    
     CleanUp:
