--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -153,21 +153,22 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  clean-up-deployment:
-    runs-on: ubuntu-latest
-    needs: Deploy
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+  CleanUp:
+        runs-on: ubuntu-latest
+        needs: Deploy
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
-      - name: Log in to Azure
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+            - name: Log in to Azure
+              uses: azure/login@v2
+              with:
+                creds: ${{ secrets.AZURE_CREDENTIALS }}
+              
+            - name: Grant execute permissions to the script
+              run: | 
+                chmod +x ./src/deploy/bicep/bash/cleanUpPipeline.sh
+                
       
-      - name: Grant execute permissions to the script
-        run: | 
-          chmod +x ./src/deploy/bicep/bash/cleanUp.sh
-
-      - name: Cleaning Up Azure Resources for ${{ env.solutionName }}
-        run: ./src/deploy/bicep/bash/cleanUp.sh 
+            - name: Cleaning Up Azure Resources for ${{ env.solutionName }}
+              run: ./src/deploy/bicep/bash/cleanUpPipeline.sh ${{ env.devBoxResourceGroupName }} ${{ env.networkResourceGroupName }} ${{ env.managementResourceGroupName }} ${{ env.location }} 'eShopPetBuilderRole' 
