--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -118,9 +118,29 @@ jobs:
           # Add your upload logic here
           echo "Uploading Bicep artifacts"
 
+  CleanUp:
+        runs-on: ubuntu-latest
+        needs: Deploy
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Log in to Azure
+              uses: azure/login@v2
+              with:
+                creds: ${{ secrets.AZURE_CREDENTIALS }}
+              
+            - name: Grant execute permissions to the script
+              run: | 
+                chmod +x ./src/deploy/bicep/bash/cleanUpPipeline.sh
+                
+      
+            - name: Cleaning Up Azure Resources for ${{ env.solutionName }}
+              run: ./src/deploy/bicep/bash/cleanUpPipeline.sh ${{ env.devBoxResourceGroupName }} ${{ env.networkResourceGroupName }} ${{ env.managementResourceGroupName }} ${{ env.location }} 'eShopPetBuilderRole' 
+  
   create-release:
       runs-on: ubuntu-latest
-      needs: Deploy
+      needs: CleanUp
       steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -152,23 +172,3 @@ jobs:
           asset_content_type: application/zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  CleanUp:
-        runs-on: ubuntu-latest
-        needs: Deploy
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-
-            - name: Log in to Azure
-              uses: azure/login@v2
-              with:
-                creds: ${{ secrets.AZURE_CREDENTIALS }}
-              
-            - name: Grant execute permissions to the script
-              run: | 
-                chmod +x ./src/deploy/bicep/bash/cleanUpPipeline.sh
-                
-      
-            - name: Cleaning Up Azure Resources for ${{ env.solutionName }}
-              run: ./src/deploy/bicep/bash/cleanUpPipeline.sh ${{ env.devBoxResourceGroupName }} ${{ env.networkResourceGroupName }} ${{ env.managementResourceGroupName }} ${{ env.location }} 'eShopPetBuilderRole' 
