fixing workloads issues

--- a/customizations/workloads/frontEndEngineer/workload.yaml
+++ b/customizations/workloads/frontEndEngineer/workload.yaml
@@ -80,16 +80,16 @@ tasks:
     parameters:
       repositoryUrl: "https://github.com/Evilazaro/eShop"
       branch: "main"
-      directory: $"C:\projects\eShop"
+      directory: "C:\\projects\\eShop"
   - name: git-clone
     description: "Clone the DevBox repository"
     parameters:
       repositoryUrl: "https://github.com/Evilazaro/MicrosoftDevBox"
       branch: "main"
-      directory: $"C:\projects\MicrosoftDevBox"
+      directory: "C:\\projects\\MicrosoftDevBox"
   - name: git-clone
     description: "Clone the Contoso Traders repository"
     parameters:
       repositoryUrl: "https://github.com/Evilazaro/ContosoTraders.git"
       branch: "main"
-      directory: $"C:\projects\ContosoTraders"
+      directory: "C:\\projects\\ContosoTraders"
