--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -105,7 +105,7 @@ jobs:
 
   publish-bicep-artifacts:
       runs-on: ubuntu-latest
-      needs: Build
+      needs: Deploy
       steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -122,7 +122,7 @@ jobs:
 
   create-release:
       runs-on: ubuntu-latest
-      needs: Deploy
+      needs: publish-bicep-artifacts
       steps:
       - name: Checkout repository
         uses: actions/checkout@v2
